--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ st.markdown("You want to print ABS, but it stinks, so you need to exhaust the ai
             printing PLA and PETG until you find a solution, or make one.")
 st.markdown("This project lays the groundwork to build all sorts of other fun stuff on top of my current 3D Printer. Extra internal cameras, \\
             custom AI fault detection, Homekit integration, RF remotes, etc.")
-st.markdown("[Test](pages/project_2.py)")
+st.markdown("[Test](project_2.py)")
 
 st.subheader("Details", divider="grey")
 st.markdown("""
