--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ st.sidebar.page_link('pages/home.py', label='**Home**')
 st.sidebar.page_link('pages/resume.py', label='**Resume**') #TODO
 st.sidebar.page_link('pages/contact.py', label='**Contact**') #TODO
 st.sidebar.caption("### :blue[Projects]")
-st.sidebar.page_link('pages/project_1.py', label='X1C Riser')
-st.sidebar.page_link('pages/project_2.py', label='Tapo Camera')
-st.sidebar.page_link('pages/project_3.py', label='Spaghetti Detection')
+st.sidebar.page_link('pages/project_1.py', label='**X1C Riser**')
+st.sidebar.page_link('pages/project_2.py', label='**Tapo Camera**')
+st.sidebar.page_link('pages/project_3.py', label='**Spaghetti Detection**')
 st.sidebar.caption("### :blue[MakerWorld]")
 st.sidebar.page_link('https://makerworld.com/en/@expiredtapwater', label='**@ExpiredTapWater**')
 
@@ -101,9 +101,9 @@ st.sidebar.page_link('pages/home.py', label='**Home**')
 st.sidebar.page_link('pages/resume.py', label='**Resume**') #TODO
 st.sidebar.page_link('pages/contact.py', label='**Contact**') #TODO
 st.sidebar.caption("### :blue[Projects]")
-st.sidebar.page_link('pages/project_1.py', label='X1C Riser')
-st.sidebar.page_link('pages/project_2.py', label='Tapo Camera')
-st.sidebar.page_link('pages/project_3.py', label='Spaghetti Detection')
+st.sidebar.page_link('pages/project_1.py', label='**X1C Riser**')
+st.sidebar.page_link('pages/project_2.py', label='**Tapo Camera**')
+st.sidebar.page_link('pages/project_3.py', label='**Spaghetti Detection**')
 st.sidebar.caption("### :blue[MakerWorld]")
 st.sidebar.page_link('https://makerworld.com/en/@expiredtapwater', label='**@ExpiredTapWater**')
 
@@ -129,9 +129,9 @@ st.sidebar.page_link('pages/home.py', label='**Home**')
 st.sidebar.page_link('pages/resume.py', label='**Resume**') #TODO
 st.sidebar.page_link('pages/contact.py', label='**Contact**') #TODO
 st.sidebar.caption("### :blue[Projects]")
-st.sidebar.page_link('pages/project_1.py', label='X1C Riser')
-st.sidebar.page_link('pages/project_2.py', label='Tapo Camera')
-st.sidebar.page_link('pages/project_3.py', label='Spaghetti Detection')
+st.sidebar.page_link('pages/project_1.py', label='**X1C Riser**')
+st.sidebar.page_link('pages/project_2.py', label='**Tapo Camera**')
+st.sidebar.page_link('pages/project_3.py', label='**Spaghetti Detection**')
 st.sidebar.caption("### :blue[MakerWorld]")
 st.sidebar.page_link('https://makerworld.com/en/@expiredtapwater', label='**@ExpiredTapWater**')
 
@@ -165,9 +165,9 @@ st.sidebar.page_link('pages/home.py', label='**Home**')
 st.sidebar.page_link('pages/resume.py', label='**Resume**') #TODO
 st.sidebar.page_link('pages/contact.py', label='**Contact**') #TODO
 st.sidebar.caption("### :blue[Projects]")
-st.sidebar.page_link('pages/project_1.py', label='X1C Riser')
-st.sidebar.page_link('pages/project_2.py', label='Tapo Camera')
-st.sidebar.page_link('pages/project_3.py', label='Spaghetti Detection')
+st.sidebar.page_link('pages/project_1.py', label='**X1C Riser**')
+st.sidebar.page_link('pages/project_2.py', label='**Tapo Camera**')
+st.sidebar.page_link('pages/project_3.py', label='**Spaghetti Detection**')
 st.sidebar.caption("### :blue[MakerWorld]")
 st.sidebar.page_link('https://makerworld.com/en/@expiredtapwater', label='**@ExpiredTapWater**')
 
@@ -300,9 +300,9 @@ st.sidebar.page_link('pages/home.py', label='**Home**')
 st.sidebar.page_link('pages/resume.py', label='**Resume**') #TODO
 st.sidebar.page_link('pages/contact.py', label='**Contact**') #TODO
 st.sidebar.caption("### :blue[Projects]")
-st.sidebar.page_link('pages/project_1.py', label='X1C Riser')
-st.sidebar.page_link('pages/project_2.py', label='Tapo Camera')
-st.sidebar.page_link('pages/project_3.py', label='Spaghetti Detection')
+st.sidebar.page_link('pages/project_1.py', label='**X1C Riser**')
+st.sidebar.page_link('pages/project_2.py', label='**Tapo Camera**')
+st.sidebar.page_link('pages/project_3.py', label='**Spaghetti Detection**')
 st.sidebar.caption("### :blue[MakerWorld]")
 st.sidebar.page_link('https://makerworld.com/en/@expiredtapwater', label='**@ExpiredTapWater**')
 
@@ -363,9 +363,9 @@ st.sidebar.page_link('pages/home.py', label='**Home**')
 st.sidebar.page_link('pages/resume.py', label='**Resume**') #TODO
 st.sidebar.page_link('pages/contact.py', label='**Contact**') #TODO
 st.sidebar.caption("### :blue[Projects]")
-st.sidebar.page_link('pages/project_1.py', label='X1C Riser')
-st.sidebar.page_link('pages/project_2.py', label='Tapo Camera')
-st.sidebar.page_link('pages/project_3.py', label='Spaghetti Detection')
+st.sidebar.page_link('pages/project_1.py', label='**X1C Riser**')
+st.sidebar.page_link('pages/project_2.py', label='**Tapo Camera**')
+st.sidebar.page_link('pages/project_3.py', label='**Spaghetti Detection**')
 st.sidebar.caption("### :blue[MakerWorld]")
 st.sidebar.page_link('https://makerworld.com/en/@expiredtapwater', label='**@ExpiredTapWater**')
 
@@ -421,9 +421,9 @@ st.sidebar.page_link('pages/home.py', label='**Home**')
 st.sidebar.page_link('pages/resume.py', label='**Resume**') #TODO
 st.sidebar.page_link('pages/contact.py', label='**Contact**') #TODO
 st.sidebar.caption("### :blue[Projects]")
-st.sidebar.page_link('pages/project_1.py', label='X1C Riser')
-st.sidebar.page_link('pages/project_2.py', label='Tapo Camera')
-st.sidebar.page_link('pages/project_3.py', label='Spaghetti Detection')
+st.sidebar.page_link('pages/project_1.py', label='**X1C Riser**')
+st.sidebar.page_link('pages/project_2.py', label='**Tapo Camera**')
+st.sidebar.page_link('pages/project_3.py', label='**Spaghetti Detection**')
 st.sidebar.caption("### :blue[MakerWorld]")
 st.sidebar.page_link('https://makerworld.com/en/@expiredtapwater', label='**@ExpiredTapWater**')
 
