--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@ st.subheader("Overview", divider="grey")
 st.markdown("You want to print ABS, but it stinks, so you need to exhaust the air. But the rear exhaust fan is too small, and moves \\
             too little air. You need to move the printer elsewhere, but you can't, there's just no space around the house. So you're stuck \\
             printing PLA and PETG until you find a solution, or make one.")
-st.markdown("This project lays the groundwork to build all sorts of other fun stuff on top of my current 3D Printer. [Extra internal cameras](project_2), \\
-            [custom AI fault detection, Homekit integration](project_3), RF remotes, etc.")
+st.markdown("This project lays the groundwork to build all sorts of other fun stuff on top of my current 3D Printer. Extra internal cameras, \\
+            custom AI fault detection, Homekit integration, RF remotes, etc.")
 
 st.subheader("Details", divider="grey")
 st.markdown("""
